--- a/TrayIconBluetoothController/TrayIconBluetoothController/TrayIconBluetoothController.csproj
+++ b/TrayIconBluetoothController/TrayIconBluetoothController/TrayIconBluetoothController.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WlanConnector.cs" />
     <Compile Include="WiFiDirectConnector.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
