--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gustavs.bluetoothpcremote">
 
+    <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ConnectBluetoothActivity" ></activity>
+        <activity android:name=".ConnectWiFiDirectActivity" ></activity>
+        <activity android:name=".ConnectWlanActivity" ></activity>
     </application>
 
 </manifest>
