--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gustavs.bluetoothpcremote">
+    package="com.example.gustavs.remotepccontroller">
 
     <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -15,16 +15,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:screenOrientation="portrait">
+        <activity android:name="com.example.gustavs.remotepccontroller.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConnectBluetoothActivity" ></activity>
-        <activity android:name=".ConnectWiFiDirectActivity" ></activity>
-        <activity android:name=".ConnectWlanActivity" ></activity>
+        <activity android:name="com.example.gustavs.remotepccontroller.bluetooth.ConnectBluetoothActivity" ></activity>
+        <activity android:name="com.example.gustavs.remotepccontroller.wifidirect.ConnectWiFiDirectActivity" ></activity>
+        <activity android:name="com.example.gustavs.remotepccontroller.wifi.ConnectWlanActivity" ></activity>
     </application>
 
 </manifest>
