--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,15 +33,7 @@
         <activity android:name="com.example.gustavs.remotepccontroller.wifidirect.ConnectWiFiDirectActivity" ></activity>
         <activity android:name="com.example.gustavs.remotepccontroller.wifi.ConnectWlanActivity" ></activity>
         <activity android:name="com.example.gustavs.remotepccontroller.ProfileActivity" ></activity>
-        <activity
-            android:name=".barcodereader.BarcodeMainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".barcodereader.MyBarcodeActivity"></activity>
         <activity android:name=".barcodereader.BarcodeCaptureActivity"
             android:label="Read Barcode"/>
     </application>
