--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
         <activity
-            android:name="com.example.gustavs.remotepccontroller.MainActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,16 +31,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.gustavs.remotepccontroller.bluetooth.ConnectBluetoothActivity"
+            android:name=".ConnectionActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.gustavs.remotepccontroller.wifidirect.ConnectWiFiDirectActivity"
+            android:name=".wifidirect.ConnectionWiFiDirectActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name="com.example.gustavs.remotepccontroller.wifi.ConnectWlanActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.example.gustavs.remotepccontroller.ProfileActivity"
+            android:name=".ProfileActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".barcodereader.BarcodeActivity"
