--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,7 @@
         </activity>
         <activity
             android:name=".ConnectionActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Fullscreen"/>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".wifidirect.ConnectionWiFiDirectActivity"
             android:screenOrientation="portrait"/>
