InputSimulator package for sending commands in c# - commands are now bytes (specified in enum WindowsKeys.java) - connection activity can now switch between presentation layout and media layout - Windows volume and media controls can now be used

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,13 +32,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ConnectionActivity"
+            android:name=".connection.ConnectionActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".wifidirect.ConnectionWiFiDirectActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".ProfileActivity"
+            android:name=".profile.ProfileActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".barcodereader.BarcodeActivity"
