--- a/TrayIconBluetoothController/TrayIconBluetoothController/TrayIconBluetoothController.csproj
+++ b/TrayIconBluetoothController/TrayIconBluetoothController/TrayIconBluetoothController.csproj
@@ -60,6 +60,10 @@
     <Reference Include="Windows">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Windows Kits\8.1\References\CommonConfiguration\Neutral\Windows.winmd</HintPath>
     </Reference>
+    <Reference Include="WindowsInput, Version=1.0.4.0, Culture=neutral, PublicKeyToken=9b287f7dc5073cad, processorArchitecture=MSIL">
+      <HintPath>..\packages\InputSimulator.1.0.4.0\lib\net20\WindowsInput.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BluetoothConnector.cs" />
@@ -72,6 +76,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QRCodeGenerator.cs" />
+    <Compile Include="VirtualKeyboard.cs" />
     <Compile Include="WlanConnector.cs" />
     <Compile Include="WiFiDirectConnector.cs" />
     <EmbeddedResource Include="Form1.resx">
