--- a/TrayIconBluetoothController/TrayIconBluetoothController/packages.config
+++ b/TrayIconBluetoothController/TrayIconBluetoothController/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="32feet.NET" version="3.5.0.0" targetFramework="net452" />
   <package id="Gma.QrCodeNet" version="0.4.1.2" targetFramework="net452" />
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net452" />
 </packages>
