GUI to control server threads

--- a/TrayIconBluetoothController/TrayIconBluetoothController/Properties/Settings.settings
+++ b/TrayIconBluetoothController/TrayIconBluetoothController/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TrayIconBluetoothController.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="port" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">8001</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
