--- a/WindowsApp/TrayIconBluetoothController/TrayIconBluetoothController.csproj
+++ b/WindowsApp/TrayIconBluetoothController/TrayIconBluetoothController.csproj
@@ -67,19 +67,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BluetoothConnector.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="src\BluetoothConnector.cs" />
+    <Compile Include="src\Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="src\Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QRCodeGenerator.cs" />
-    <Compile Include="VirtualKeyboard.cs" />
-    <Compile Include="WlanConnector.cs" />
-    <EmbeddedResource Include="MainForm.resx">
+    <Compile Include="src\QRCodeGenerator.cs" />
+    <Compile Include="src\VirtualKeyboard.cs" />
+    <Compile Include="src\WlanConnector.cs" />
+    <EmbeddedResource Include="src\Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
